Package Name updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-npm-package",
+  "name": "demo-package-typescript",
   "version": "1.0.0",
   "description": "A nice greeter",
   "main": "lib/index.js",
